@@ -60,6 +60,7 @@ public class CompactionStatus
   private static final Logger log = new Logger(CompactionStatus.class);
 
   private static final CompactionStatus COMPLETE = new CompactionStatus(State.COMPLETE, null, null, null);
+  public static final String NEVER_COMPACTED_REASON = "not compacted yet";
 
   public enum State
   {
@@ -86,7 +87,7 @@ public class CompactionStatus
       Evaluator::rollupIsUpToDate,
       Evaluator::dimensionsSpecIsUpToDate,
       Evaluator::metricsSpecIsUpToDate,
-      Evaluator::transformSpecFilterIsUpToDate,
+      Evaluator::transformSpecIsUpToDate,
       Evaluator::projectionsAreUpToDate
   );
 
@@ -258,7 +259,7 @@ public class CompactionStatus
    * segments but only the first incomplete status is returned.
    */
   static CompactionStatus compute(
-      CompactionCandidate candidateSegments,
+      List<DataSegment> candidateSegments,
       DataSourceCompactionConfig config,
       @Nullable IndexingStateFingerprintMapper fingerprintMapper
   )
@@ -347,7 +348,8 @@ public class CompactionStatus
   private static class Evaluator
   {
     private final DataSourceCompactionConfig compactionConfig;
-    private final CompactionCandidate candidateSegments;
+    private final List<DataSegment> candidateSegments;
+    private final long totalSegmentBytes;
     private final ClientCompactionTaskQueryTuningConfig tuningConfig;
     private final UserCompactionTaskGranularityConfig configuredGranularitySpec;
 
@@ -361,13 +363,14 @@ public class CompactionStatus
     private final IndexingStateFingerprintMapper fingerprintMapper;
 
     private Evaluator(
-        CompactionCandidate candidateSegments,
+        List<DataSegment> candidateSegments,
         DataSourceCompactionConfig compactionConfig,
         @Nullable String targetFingerprint,
         @Nullable IndexingStateFingerprintMapper fingerprintMapper
     )
     {
       this.candidateSegments = candidateSegments;
+      this.totalSegmentBytes = candidateSegments.stream().mapToLong(DataSegment::getSize).sum();
       this.compactionConfig = compactionConfig;
       this.tuningConfig = ClientCompactionTaskQueryTuningConfig.from(compactionConfig);
       this.configuredGranularitySpec = compactionConfig.getGranularitySpec();
@@ -407,7 +410,7 @@ public class CompactionStatus
                   .map(f -> f.apply(this))
                   .filter(status -> !status.isComplete())
                   .map(CompactionStatus::getReason)
-                  .collect(Collectors.toList())
+                  .toList()
         );
 
         // Any segments left in unknownStateToSegments passed all checks and are considered compacted
@@ -416,7 +419,7 @@ public class CompactionStatus
                 .values()
                 .stream()
                 .flatMap(List::stream)
-                .collect(Collectors.toList())
+                .toList()
         );
       }
 
@@ -466,7 +469,7 @@ public class CompactionStatus
             mismatchedFingerprintToSegmentMap.values()
                                             .stream()
                                             .flatMap(List::stream)
-                                            .collect(Collectors.toList())
+                                            .toList()
         );
         return CompactionStatus.pending("Segments have a mismatched fingerprint and no fingerprint mapper is available");
       }
@@ -507,7 +510,7 @@ public class CompactionStatus
      */
     private CompactionStatus segmentsHaveBeenCompactedAtLeastOnce()
     {
-      for (DataSegment segment : candidateSegments.getSegments()) {
+      for (DataSegment segment : candidateSegments) {
         final String fingerprint = segment.getIndexingStateFingerprint();
         final CompactionState segmentState = segment.getLastCompactionState();
         if (fingerprint != null) {
@@ -522,7 +525,7 @@ public class CompactionStatus
       if (uncompactedSegments.isEmpty()) {
         return COMPLETE;
       } else {
-        return CompactionStatus.pending("not compacted yet");
+        return CompactionStatus.pending(NEVER_COMPACTED_REASON);
       }
     }
 
@@ -566,9 +569,9 @@ public class CompactionStatus
       return evaluateForAllCompactionStates(this::metricsSpecIsUpToDate);
     }
 
-    private CompactionStatus transformSpecFilterIsUpToDate()
+    private CompactionStatus transformSpecIsUpToDate()
     {
-      return evaluateForAllCompactionStates(this::transformSpecFilterIsUpToDate);
+      return evaluateForAllCompactionStates(this::transformSpecIsUpToDate);
     }
 
     private CompactionStatus partitionsSpecIsUpToDate(CompactionState lastCompactionState)
@@ -612,10 +615,10 @@ public class CompactionStatus
     private CompactionStatus inputBytesAreWithinLimit()
     {
       final long inputSegmentSize = compactionConfig.getInputSegmentSizeBytes();
-      if (candidateSegments.getTotalBytes() > inputSegmentSize) {
+      if (totalSegmentBytes > inputSegmentSize) {
         return CompactionStatus.skipped(
             "'inputSegmentSize' exceeded: Total segment size[%d] is larger than allowed inputSegmentSize[%d]",
-            candidateSegments.getTotalBytes(), inputSegmentSize
+            totalSegmentBytes, inputSegmentSize
         );
       } else {
         return COMPLETE;
@@ -750,17 +753,22 @@ public class CompactionStatus
       }
     }
 
-    private CompactionStatus transformSpecFilterIsUpToDate(CompactionState lastCompactionState)
+    private CompactionStatus transformSpecIsUpToDate(CompactionState lastCompactionState)
     {
-      if (compactionConfig.getTransformSpec() == null) {
+      final CompactionTransformSpec configuredSpec = compactionConfig.getTransformSpec();
+      if (configuredSpec == null
+          || (configuredSpec.getFilter() == null && configuredSpec.getVirtualColumns().isEmpty())) {
         return COMPLETE;
       }
 
-      CompactionTransformSpec existingTransformSpec = lastCompactionState.getTransformSpec();
+      final CompactionTransformSpec existingSpec = Configs.valueOrDefault(
+          lastCompactionState.getTransformSpec(),
+          new CompactionTransformSpec(null, null)
+      );
       return CompactionStatus.completeIfNullOrEqual(
-          "transformSpec filter",
-          compactionConfig.getTransformSpec().getFilter(),
-          existingTransformSpec == null ? null : existingTransformSpec.getFilter(),
+          "transformSpec",
+          configuredSpec,
+          existingSpec,
           String::valueOf
       );
     }
